--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,20 @@ services:
         depends_on:
             - consul-server
 
+    gateway:
+      image: gateway
+      build:
+        context: ./api-gateway
+        dockerfile: Dockerfile
+      tty: true
+      ports:
+        - "8080:8080"
+      depends_on:
+        - consul-server
+      restart: unless-stopped
+      networks:
+        - static-network
+
     cars-ads-service:
         image: cars-ads-service
         build:
@@ -43,20 +57,20 @@ services:
         networks:
             - static-network
 
-    rent-service:
-        image: rent-service
-        build:
-            context: ./carRent
-            dockerfile: Dockerfile
-        tty: true
-        depends_on:
-            - consul-server
-            - db
-        restart: unless-stopped
-        environment:
-            DB_PATH: jdbc:postgresql://db:5432/
-        networks:
-            - static-network
+#    rent-service:
+#        image: rent-service
+#        build:
+#            context: ./carRent
+#            dockerfile: Dockerfile
+#        tty: true
+#        depends_on:
+#            - consul-server
+#            - db
+#        restart: unless-stopped
+#        environment:
+#            DB_PATH: jdbc:postgresql://db:5432/
+#        networks:
+#            - static-network
 
     cars-service:
         image: cars-service
@@ -67,44 +81,47 @@ services:
         depends_on:
              - consul-server
              - db
+             - gateway
         restart: unless-stopped
         environment:
             DB_PATH: postgres://postgres:postgres@db:5432/
             CONSUL_ADDR: consul-server:8500
             MY_ADDR: cars-service
             PORT: 8080
-        networks:
-            - static-network
-    
-    user-service:
-        image: user-service
-        build:
-            context: ./user
-            dockerfile: Dockerfile
-        tty: true
-        depends_on:
-            - consul-server
-            - db
-        restart: unless-stopped
-        environment:
-            DB_PATH: jdbc:postgresql://db:5432/
+            API_GATEWAY: gateway
         networks:
             - static-network
 
-    codebook-service:
-        image: codebook-service
-        build:
-            context: ./codebook
-            dockerfile: Dockerfile
-        tty: true
-        depends_on:
-            - consul-server
-            - db
-        restart: unless-stopped
-        environment:
-            DB_PATH: jdbc:postgresql://db:5432/
-        networks:
-            - static-network
+    
+    # user-service:
+    #     image: user-service
+    #     build:
+    #         context: ./user
+    #         dockerfile: Dockerfile
+    #     tty: true
+    #     depends_on:
+    #         - consul-server
+    #         - db
+    #     restart: unless-stopped
+    #     environment:
+    #         DB_PATH: jdbc:postgresql://db:5432/
+    #     networks:
+    #         - static-network
+
+#    codebook-service:
+#        image: codebook-service
+#        build:
+#            context: ./codebook
+#            dockerfile: Dockerfile
+#        tty: true
+#        depends_on:
+#            - consul-server
+#            - db
+#        restart: unless-stopped
+#        environment:
+#            DB_PATH: jdbc:postgresql://db:5432/
+#        networks:
+#            - static-network
             
     community-service:
         image: community-service
@@ -121,19 +138,7 @@ services:
         networks:
             - static-network
     
-    gateway:
-        image: gateway
-        build:
-            context: ./api-gateway
-            dockerfile: Dockerfile
-        tty: true
-        ports:
-            - "8080:8080"
-        depends_on:
-            - consul-server
-        restart: unless-stopped
-        networks:
-            - static-network
+
 
     #client-front:
     #    image: client-front
