--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,20 +57,20 @@ services:
         networks:
             - static-network
 
-#    rent-service:
-#        image: rent-service
-#        build:
-#            context: ./carRent
-#            dockerfile: Dockerfile
-#        tty: true
-#        depends_on:
-#            - consul-server
-#            - db
-#        restart: unless-stopped
-#        environment:
-#            DB_PATH: jdbc:postgresql://db:5432/
-#        networks:
-#            - static-network
+    rent-service:
+        image: rent-service
+        build:
+            context: ./carRent
+            dockerfile: Dockerfile
+        tty: true
+        depends_on:
+            - consul-server
+            - db
+        restart: unless-stopped
+        environment:
+            DB_PATH: jdbc:postgresql://db:5432/
+        networks:
+            - static-network
 
     cars-service:
         image: cars-service
@@ -93,35 +93,35 @@ services:
             - static-network
 
     
-    # user-service:
-    #     image: user-service
-    #     build:
-    #         context: ./user
-    #         dockerfile: Dockerfile
-    #     tty: true
-    #     depends_on:
-    #         - consul-server
-    #         - db
-    #     restart: unless-stopped
-    #     environment:
-    #         DB_PATH: jdbc:postgresql://db:5432/
-    #     networks:
-    #         - static-network
+    user-service:
+        image: user-service
+        build:
+            context: ./user
+            dockerfile: Dockerfile
+        tty: true
+        depends_on:
+            - consul-server
+            - db
+        restart: unless-stopped
+        environment:
+            DB_PATH: jdbc:postgresql://db:5432/
+         networks:
+            - static-network
 
-#    codebook-service:
-#        image: codebook-service
-#        build:
-#            context: ./codebook
-#            dockerfile: Dockerfile
-#        tty: true
-#        depends_on:
-#            - consul-server
-#            - db
-#        restart: unless-stopped
-#        environment:
-#            DB_PATH: jdbc:postgresql://db:5432/
-#        networks:
-#            - static-network
+    codebook-service:
+        image: codebook-service
+        build:
+            context: ./codebook
+            dockerfile: Dockerfile
+        tty: true
+        depends_on:
+            - consul-server
+            - db
+        restart: unless-stopped
+        environment:
+            DB_PATH: jdbc:postgresql://db:5432/
+        networks:
+            - static-network
             
     community-service:
         image: community-service
