--- a/agent-back/src/main/resources/application.properties
+++ b/agent-back/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.platform=postgres
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=root
 
 #JPA-Hibernate
 spring.jpa.show-sql = true
